--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Peng",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0"
   }
 }
