--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "start": "node index.js",
     "lint": "eslint .",
+    "watch": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Peng",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.9",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "eslint": "^6.1.0"
+    "eslint": "^6.1.0",
+    "nodemon": "^1.19.1"
   }
 }
