--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "mongoose": "^5.6.9",
     "xml2js": "^0.4.19"
   },
