--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,14 @@
   "author": "Daniel Peng",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "mongoose": "^5.6.9",
+    "mongoose-unique-validator": "^2.0.3",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
