--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
     "mongoose-unique-validator": "^2.0.3",
     "xml2js": "^0.4.19"
