--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "data-runner",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "lint": "eslint .",
     "watch": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../frontend && npm run build --prod && cp -r build ../backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Peng",
