--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.8.5",
     "axios": "^0.19.0",
     "leaflet": "^1.5.1",
     "react": "^16.8.6",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "^16.8.6",
     "react-leaflet": "^2.4.0",
     "react-leaflet-heatmap-layer": "^2.0.0",
