--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
+    "dev-server": "json-server db.json --routes routes.json --port 3001",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^0.15.1"
   }
 }
