--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint .",
     "watch": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../frontend && npm run build --prod && cp -r build ../backend",
+    "deploy": "cd .. && git subtree push --prefix backend heroku master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Peng",
